# LitScribe

./: .env.example  .gitignore  AGENTS.md  LICENSE  README.md  benchmark_report.md  demo.py  environment.yml  pyproject.toml
benchmarks/ground_truth/: bio_alkaloid_expected.json  cs_transformer_expected.json  med_crispr_expected.json
benchmarks/queries/: bio_alkaloid.json  bio_alkaloid_zh.json  cs_transformer.json  med_crispr.json
docs/: linkedin_post.md  plans-20260211.md
docs/arxiv/: main.aux  main.bbl  main.blg  main.out  main.tex  neurips_2024.sty  references.bib
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.css  App.tsx  api.ts  index.css  types.ts
litscribe/: agents.py  config.py
litscribe/agents/: agno_agents.py  agno_pipeline.py  chat.py  pipeline.py  planner.py
litscribe/api/: app.py  deps.py  main.py  websocket.py
litscribe/cli/: main.py
litscribe/evolution/: episodic.py  memory_manager.py  procedural.py  semantic.py  skill_evolver.py
litscribe/exporters/: bibtex.py  citation_formatter.py  pandoc.py
litscribe/llm/: adapter.py  router.py  tracker.py
litscribe/middleware/: evolution.py  token_tracking.py
litscribe/models/: analysis.py  assessment.py  paper.py  plan.py  review.py
litscribe/prompts/: __init__.py  discovery.py  planner_system.py  planning.py  reading.py  refinement.py  review.py  supervisor.py  synthesis.py  templates.py  utils.py
litscribe/services/: arxiv.py  base.py  cnki.py  europe_pmc.py  openalex.py  pdf.py  pubmed.py  semantic_scholar.py  unpaywall.py  zotero.py
litscribe/store/: knowledge.py  sessions.py  sqlite.py  unified.py  vectors.py
litscribe/tools/: analytics.py  benchmark.py  cite_keys.py  claim_chain.py  comparison.py  contradictions.py  debate.py  diff.py  discovery.py  export.py  graphrag.py  grounding.py  integrity.py  local_review.py  metacognition.py  outline_parser.py  outline_review.py  output.py  pipeline.py  reading.py  refinement.py  review.py  sanitize.py  search.py  status.py  synthesis.py  templates_run.py
output/: review_What_are_the_latest_advances_i_20260201_032041.json  review_What_are_the_latest_advances_i_20260201_032041.md  review_large_language_model_fine-tuni_20260201_061123.json  review_large_language_model_fine-tuni_20260201_061123.md  review_large_language_model_fine-tuni_20260201_063435.json  review_large_language_model_fine-tuni_20260201_063435.md  review_large_language_model_fine-tuni_20260201_075658.json  review_large_language_model_fine-tuni_20260201_075658.md  review_large_language_model_fine-tuni_20260201_081625.json  review_large_language_model_fine-tuni_20260201_081625.md
scripts/: demo_workflow.py  evaluate.py  run_ablation.py  test_arxiv.py  test_pdf_parser.py  test_pubmed.py  test_semantic_scholar.py  test_unified_search.py  test_zotero.py
skills/bib-format/: SKILL.md
skills/lit-discuss/: SKILL.md
skills/lit-search/: SKILL.md
skills/quick-abstract/: SKILL.md
skills/writing-diagnosis/: SKILL.md
src/: mcp_server.py
src/agents/: __init__.py  critical_reading_agent.py  discovery_agent.py  errors.py  graph.py  planning_agent.py  prompts.py  refinement_agent.py  self_review_agent.py  state.py  supervisor.py  synthesis_agent.py  tools.py
src/aggregators/: __init__.py  deduplicator.py  unified_search.py
src/analysis/: citation_grounding.py
src/cache/: __init__.py  cached_tools.py  database.py  failed_papers.py  graphrag_cache.py  paper_cache.py  parse_cache.py  pdf_cache.py  search_cache.py
src/cli/: __init__.py  litscribe_cli.py  output.py
src/embeddings/: semantic_scorer.py
src/exporters/: __init__.py  bibtex_exporter.py  citation_formatter.py  pandoc_exporter.py
src/graphrag/: __init__.py  community_detector.py  entity_extractor.py  entity_linker.py  graph_builder.py  integration.py  prompts.py  summarizer.py
src/mcp_servers/: arxiv_server.py  pdf_parser_server.py  pubmed_server.py  semantic_scholar_server.py  zotero_server.py
src/models/: paper.py  parsed_document.py  pubmed_article.py  scholar_article.py  unified_paper.py  zotero_item.py
src/services/: arxiv.py  europe_pmc.py  (+6 more)
tests/: README.md  conftest.py  test_abstract_analysis.py  test_api_parameters.py  test_arxiv_ratelimit.py  test_cache_manual.py  test_checkpointing.py  test_citation_grounding.py  test_config.py  test_critical_reading_cache.py  test_discovery_cache.py  test_europe_pmc.py  test_evaluator.py  test_exporters.py  test_filter_relaxation.py  test_graphrag.py  test_integration.py  test_loopback.py  test_openalex.py  test_plan_override.py  test_reasoning_model.py  test_review_title.py  test_screening_snowball.py  test_search_quality.py  test_search_strategy.py  test_semantic_scoring.py  test_tier_system.py  test_token_tracker.py  test_unpaywall.py  test_zotero_integration.py
(+64 files in other folders)
