[project]
name = "litscribe"
version = "2.0.0"
description = "Self-evolving multi-agent literature review engine"
requires-python = ">=3.11"
dependencies = [
    "agno>=2.5.0",
    "litellm>=1.40.0",
    "aiosqlite>=0.20.0",
    "chromadb>=0.5.0",
    "sentence-transformers>=3.0.0",
    "networkx>=3.0",
    "graspologic>=3.0",
    "pymupdf4llm>=0.0.10",
    "tenacity>=8.0",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "typer>=0.12.0",
    "httpx>=0.27.0",
    "pydantic>=2.7.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23.0",
    "pytest-httpx>=0.30.0",
    "httpx>=0.27.0",
]

[project.scripts]
litscribe = "litscribe.cli.main:app"
litscribe-server = "litscribe.api.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
