[project]
name = "litscribe"
version = "0.1.0"
description = "An autonomous academic synthesis engine using MCP and multi-agent architecture"
authors = [
    {name = "Arnold", email = "your.email@example.com"}
]
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}

dependencies = [
    # DeepAgents core
    "deepagents==0.5.7",
    "langchain-openai>=0.3.0",
    # LangGraph (used by DeepAgents)
    "langgraph>=0.2.0",
    "langgraph-checkpoint-sqlite>=3.0.0",
    "langchain-core>=0.3.0",
    # Search services
    "arxiv",
    "pyzotero",
    "biopython",
    "aiohttp",
    "httpx>=0.27.0",
    # PDF parsing
    "pymupdf4llm>=0.0.10",
    "pymupdf",
    # Vector store + embeddings
    "chromadb>=0.5.0",
    # Storage
    "aiosqlite>=0.20.0",
    # GraphRAG
    "networkx>=3.2",
    "graspologic>=3.4.0",
    # Web UI
    "fastapi",
    "uvicorn",
    # Core
    "pydantic>=2.0",
    "typer>=0.12.0",
    "python-dotenv",
    "tenacity",
    "pyyaml",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "ruff",
    "mypy",
]

[project.scripts]
litscribe = "litscribe.cli.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["litscribe*"]

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=litscribe --cov-report=html --cov-report=term"
asyncio_mode = "auto"
